<resources>
    <string name="app_name">PizzaOrder</string>
    <string name="pizza_order">Pizza Order</string>
    <string name="todo">TODO</string>
    <string name="select_size">Select the size:</string>
    <string name="select_toppings">Select the toppings:</string>
    <string name="right_pizza_logo">Right Pizza Logo</string>
    <string name="left_pizza_logo">Left Pizza Logo</string>
    <string name="small_9_rb">Small - $9</string>
    <string name="medium_10_rb">Medium - $10</string>
    <string name="large_11_rb">Large - $11</string>
    <string name="meat_2_ChB">Meat + $2</string>
    <string name="cheese_2_ChB">Cheese + $2</string>
    <string name="veggies_2_ChB">Veggies + $2</string>
    <string name="delivery_required_q">Delivery required?</string>
    <string name="yes_switch">Yes</string>
    <string name="total_price">Total Price:</string>
    <string name="total_price_output">Total Price: $</string>
    <string name="delivery_required">Delivery required!</string>
</resources>