<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.u200.pizzaorder.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="44dp"
        android:text="Pizza Order"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/imagePizzaRight"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagePizzaLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/left_pizza_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizzaleft"
        android:layout_marginLeft="8dp" />

    <ImageView
        android:id="@+id/imagePizzaRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/right_pizza_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizzaright"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/selectSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/select_size"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/selectTopping"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/selectTopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:text="@string/select_toppings"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addMeat"
        app:layout_constraintEnd_toEndOf="@+id/addMeat"
        app:layout_constraintStart_toEndOf="@+id/addMeat" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="179dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp">

        <RadioButton
            android:id="@+id/smallPizzaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="radioClicked"
            android:text="@string/small_9_rb"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/mediumPizzaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="radioClicked"
            android:text="@string/medium_10_rb"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/largePizzaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="radioClicked"
            android:text="@string/large_11_rb"
            android:textSize="18sp" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/addMeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/meat_2_ChB"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/addCheese"
        app:layout_constraintStart_toStartOf="@+id/addCheese" />

    <CheckBox
        android:id="@+id/addCheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/cheese_2_ChB"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/addVeggies"
        app:layout_constraintStart_toStartOf="@+id/addVeggies" />

    <CheckBox
        android:id="@+id/addVeggies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/veggies_2_ChB"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        android:layout_marginLeft="25dp" />

    <TextView
        android:id="@+id/addDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/delivery_required_q"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/switch1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="50dp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="36dp"
        android:onClick="onSwitchClicked"
        android:text="@string/yes_switch"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/addVeggies"
        app:layout_constraintTop_toBottomOf="@+id/addVeggies"
        android:layout_marginRight="20dp" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:layout_marginStart="28dp"
        android:text="Total Price: $"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/deliveryNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total"
        android:layout_marginLeft="32dp" />
</android.support.constraint.ConstraintLayout>
